src/EntryPoint/index.css
/*
 * This file contains global styling.
 * A lot of dark/light mode config is written here.
 */


@import "tailwindcss/base";

@import "tailwindcss/components";
@import "./custom-components.css";

@import "tailwindcss/utilities";

@font-face {
  font-family: 'Daddy Rewind';
  src: 
    local("Arial"),
    url("../Fonts/DaddyRewind-MVYAP.ttf") format("truetype");
  font-display: swap;
}

@font-face {
  font-family: 'Nunito Bold';
  src:
    local("Arial"),
    url("../Fonts/Nunito-Bold.ttf") format("truetype");
  font-display: swap;
}

@layer base {
  p, div, span, a {
    @apply dark:text-white text-xl;
  }
  p {
    @apply dark:text-gray-300 text-gray-600 leading-relaxed;
  }
  h1 {
    @apply dark:text-white text-3xl;
  }
  h2 {
    @apply dark:text-white text-2xl;
  }
  h3 {
    @apply dark:text-white text-xl;
  }
  button {
    @apply bg-indigo-600 hover:bg-indigo-300 dark:bg-indigo-900 dark:hover:bg-indigo-600 transition duration-300 ease-in-out py-2 px-4 text-xl rounded shadow-lg text-white;
  }
  a {
    @apply bg-white justify-items-center my-5 cursor-pointer hover:bg-indigo-300 dark:bg-indigo-1000 dark:hover:bg-indigo-600 transition duration-300 ease-in-out py-2 px-4 text-lg rounded text-black dark:text-white;
  }
  img {
    width: 100%;
    height: 100%;
  }
}

@layer components {
  .dark {
    @apply bg-indigo-1000;
  }

  .navbar {
    @apply sticky top-0 w-full bg-indigo-navbarLight dark:bg-indigo-navbar;
    z-index: 5;
  }

  .icon-button {
    background: rgba(0,0,0, .08);
    padding: 15px;
    margin: 0 0 0 15px;
  }

  .custom-container {
    @apply container 2xl:px-60 xl:px-44 lg:px-14 md:px-10 px-5 xl:py-10 lg:py-8 py-5 ease-out;
    transition: padding .5s;
  }

  #custom-container-root {
    @apply ease-out;
    transition: padding .5s;
  }

  .custom-container[data-stuck="true"] {
    @apply py-1;
  }

  #custom-container-root[data-stuck="true"] {
    @apply xl:py-9 lg:py-7 py-4;
  }

  .icon {
    @apply text-white dark:bg-black;
  }

  .nav-container {
    @apply flex justify-items-center justify-end;
  }
  
  .nav-item {
    @apply bg-transparent dark:bg-transparent;
  }

  .info-box {
    @apply w-screen;
  }
}

